<resources>
    <string name="app_name">Boyot</string>
    <string name="invoices">Invoices</string>
    <string name="invoice_details">Invoice details</string>

    <string name="invoices_">%1$s Invoices</string>
    <string name="receipts_">%1$s Receipts</string>
    <string name="name_is">Name: %1$s</string>
    <string name="gender_is">Gender: %1$s</string>
    <string name="type_is">Type: %1$s</string>
    <string name="size_is">Size: %1$s</string>
    <string name="color_is">Color: %1$s</string>
    <string name="address_is">Address: %1$s</string>

    <string name="invoice_website">Invoice\'s website</string>


    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="email_or_phone_number">Email or phone number</string>

    <string name="please_enter_your_email_or_phone_number">Please enter your email or phone number</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="password_should_be_more_than_6_characters">Password should be more than6 characters</string>

    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="try_again">Try again</string>

    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="user_name">User name</string>
    <string name="user_code">User code</string>
    <string name="contract_number">Contract number</string>
    <string name="building_number">Building number</string>
    <string name="required">Required</string>
    <string name="building_name">Building name</string>
    <string name="invoices_search">Invoices search</string>
    <string name="users">Users</string>
    <string name="receipts">Receipts</string>
    <string name="payment_notification">Payment notification</string>
    <string name="data_update">Data update</string>
    <string name="_continue">Continue</string>
    <string name="pay_now">Pay now</string>
    <string name="visa">Visa</string>
    <string name="cash">Cash</string>
    <string name="payment_methods">Payment methods</string>
    <string name="client_code_is_required">Client code is required</string>
    <string name="client_name_is_required">Client name is required</string>
    <string name="contract_number_is_required">Contract number is required</string>
    <string name="building_id_and_unit_id_is_required">Building id and unit id is required</string>
    <string name="unit_id_is_required">Unit id is required</string>
    <string name="name">Name</string>
    <string name="client_phone">Client phone</string>
    <string name="email">Email</string>
    <string name="national_id">National id</string>
    <string name="national_id_image">National id image</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="save_changes">Save changes</string>
    <string name="back">Back</string>
    <string name="permission_required">Permission Required</string>
    <string name="to_use_this_app_you_must_grant_camera_permission_please_go_to_app_settings_and_enable_the_camera_permission">To use this app, you must grant camera permission. Please go to App Settings and enable the camera permission.</string>
    <string name="open_settings">Open Settings</string>
    <string name="request_permission">Request permission</string>
    <string name="cancel">Cancel</string>
    <string name="insert_client_phone">Insert client phone</string>
    <string name="insert_email">Insert email</string>
    <string name="insert_national_id">Insert national id</string>
    <string name="payment_process_summary">Payment process summary</string>
    <string name="invoice_payment">Invoice payment</string>
    <string name="what_will_be_paid">What will be paid</string>
    <string name="payment_method">Payment method</string>
    <string name="total_cost">Total cost</string>
    <string name="service_expenses">Service expenses</string>
    <string name="tax">Tax</string>
    <string name="cost">Cost</string>
    <string name="_egp">%1$s EGP</string>
    <string name="receipt">Receipt</string>
    <string name="operation_number">Operation number</string>
    <string name="operation_number_"><![CDATA[Operation number: <b><font color=#1456B2>%1$s</font></b>]]></string>
    <string name="your_transaction_was_completed_successfully_in"><![CDATA[Your transaction <b><font color=#1456B2>%1$s</font></b> was completed successfully in %2$s]]></string>
    <string name="service_type">Service type</string>
    <string name="client_name">Client name</string>
    <string name="invoice_number">Invoice number</string>
    <string name="contract_name">Contract name</string>
    <string name="unit_number">Unit number</string>
    <string name="region">Region</string>
    <string name="remain">Remain</string>
    <string name="total">Total</string>
    <string name="contract_type">Contract type</string>
    <string name="invoice_date">Invoice date</string>
    <string name="print">Print</string>
    <string name="return_to_another_operation">Return to another operation</string>
    <string name="unit_name">unit_name</string>
    <string name="powered_by">POWERED BY</string>
    <string name="no_results">No Results</string>
    <string name="options">Options</string>
    <string name="invoice_">Invoice: %1$s</string>
    <string name="receipt_">Receipt: %1$s</string>
    <string name="address_">Address: %1$s</string>
    <string name="invoices_count">Invoices count</string>
    <string name="invoices_total_cost">Invoices total cost</string>
    <string name="you_should_select_at_least_one_invoice">You should select at least one invoice</string>

</resources>