<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MyApplication.AppBarOverlay">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:navigationIcon="@drawable/ic_back_arrow"
            app:popupTheme="@style/Theme.MyApplication.PopupOverlay"
            app:title="@string/data_update"
            app:titleTextColor="@color/white" >

            <ImageView
                android:id="@+id/iv_header_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingHorizontal="20dp"
                android:src="@drawable/ic_header_logo" />
        </com.google.android.material.appbar.MaterialToolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textColor="#1456B2"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textSize="16sp"
                            tools:text="محمد أحمد محمد" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/client_phone"
                            android:textColor="#1456B2"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/et_client_phone"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/transparent"
                            android:enabled="false"

                            android:gravity="center_vertical"
                            android:hint="@string/insert_client_phone"
                            android:inputType="phone"
                            android:textSize="16sp"
                            tools:text="01067785463" />

                        <ImageView
                            android:id="@+id/iv_edit_client_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:src="@drawable/ic_edit" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/email"
                            android:textColor="#1456B2"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/transparent"
                            android:enabled="false"
                            android:hint="@string/insert_email"
                            android:inputType="textEmailAddress"
                            android:textDirection="ltr"
                            android:textSize="16sp"
                            tools:text="MohamedAhmed@gmail.com" />

                        <ImageView
                            android:id="@+id/iv_edit_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:src="@drawable/ic_edit" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/national_id"
                            android:textColor="#1456B2"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/et_national_id"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/transparent"
                            android:enabled="false"
                            android:gravity="end|center_vertical"
                            android:hint="@string/insert_national_id"
                            android:inputType="number"
                            android:textSize="16sp"
                            tools:text="3689786354652178" />

                        <ImageView
                            android:id="@+id/iv_edit_national_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:src="@drawable/ic_edit" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/national_id_image"
                            android:textColor="#1456B2"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_take_a_picture"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="end|center_vertical"
                            android:text="@string/take_a_picture"
                            android:textColor="#F7951D"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/iv_take_a_picture"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:src="@drawable/ic_camera" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_national_id_image"
                        android:layout_width="match_parent"
                        android:layout_height="256dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/logo"
                        android:visibility="gone"
                        tools:visibility="visible" />


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_changes"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/save_changes"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:visibility="gone"

                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="15dp"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:backgroundTint="@color/white"
                app:cornerRadius="15dp"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="1dp"
                tools:visibility="visible" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>

